@@ -1,3 +1,7 @@
+2002-12-06  David Carlton  <carlton@math.stanford.edu>
+
+	* gdb.base/store.c: Don't declare functions static.
+
 2002-12-04  Andrew Cagney  <ac131313@redhat.com>
 
 	* gdb.base/store.exp, gdb.base/store.c: New files.
